<resources>
    <string name="app_name">Realtime DB</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="action_save">Create Account</string>
    <string name="action_getDelivery">Get Delivery</string>
    <string name="action_cust_login">Customer Login</string>
    <string name="action_adminlogin">Admin Login</string>
    <string name="action_getRecords">Know Deliveries</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobileno">Mobile No</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="title_activity_customer_dash_board">CustomerDashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
</resources>
