<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coderVJ.realtimedb.activities.CustomerDashBoard"
    tools:showIn="@layout/app_bar_customer_dash_board">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Book Delivery"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />
    <LinearLayout
        android:id="@+id/linearDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/delivery_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobileno"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/delivery_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="textEmailAddress"
            android:maxLines="1" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_getDelivery"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_getDelivery"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>
